# clawless

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
config/: config.example.json
docs/: ARCHITECTURE.md  CONFIG.md  HEARTBEAT.md  MCP.md  SKILLS.md  TESTING.md
src/clawless/: __init__.py  agent.py  bot_service.py  cli.py  config.py  db.py  heartbeat.py  logging_utils.py  paths.py  router.py  scheduler.py  streamlit_app.py  tracks.py
src/clawless/mcp/: client.py
src/clawless/telegram/: adapter.py
src/clawless/tools/: __init__.py  base.py  file_tools.py  gmail_tools.py  mcp_tools.py  skill_tools.py
tests/: test_agent_tool_call.py  test_compile.py  test_config.py  test_file_tools.py  test_gmail_tools.py  test_heartbeat.py  test_logging_utils.py  test_mcp_client.py  test_paths.py  test_router.py  test_tracks.py
